--- a/ballstyles.css
+++ b/ballstyles.css
@@ -3,13 +3,18 @@ html{
 }
 
 body{ 
-	user-select: none;
+	-webkit-touch-callout: none;
+    -webkit-user-select: none;
+     -khtml-user-select: none; 
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
 	}
 
 .text{
 	text-align: center;
 	opacity:0.3;
-	font-size:300%;
+	font-size:400%;
 	font-family:"Courier New";
 }
 	
