--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,6 @@ body{
 }
 
 td{
-	width:200px;
 	font-size:175%;
 }
 
@@ -21,7 +20,7 @@ td{
 
 #aboutme{
 	background-color:#434549;
-	font-size:350%;
+	font-size:250%;
 	color:#fffaf7;
 	font-weight:bold;
 }
@@ -90,6 +89,9 @@ td{
 
 #skilltable{
 	background-color:#d1e2ff;
+	width:100%;
+	border-collapse:separate;
+	border-spacing:30px 5px;
 }
 
 .skilltype{
