--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 body{
 	max-width: 100%;
-	overflow-x: hidden;
+	overflow-x:hidden;
 	font-family:Amiko;
+	background-color:#e5e5e5;
 }
 
 td{
@@ -11,10 +12,10 @@ td{
 .landing{
 	height:100vh;
 	width:100vw;
-	justify-content: center;
-	align-items: center;
-	display: flex;
-	flex-direction: column;
+	justify-content:center;
+	align-items:center;
+	display:flex;
+	flex-direction:column;
 	margin-bottom:4em;
 }
 
@@ -88,7 +89,6 @@ td{
 }
 
 #skilltable{
-	background-color:#d1e2ff;
 	width:100%;
 	border-collapse:separate;
 	border-spacing:30px 5px;
