--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,6 @@ body{
 	background-color:#e5e5e5;
 }
 
-td{
-	font-size:175%;
-}
-
 .landing{
 	height:100vh;
 	width:100vw;
@@ -86,15 +82,43 @@ td{
 	color:#424447;
 	font-size:400%;
 	font-weight:bolder;
+	text-align:center;
+	margin-top:50px;
+	margin-bottom:40px;
 }
 
 #skilltable{
 	width:100%;
 	border-collapse:separate;
-	border-spacing:30px 5px;
+	border-spacing:50px 20px;
+	font-size:175%;
 }
 
 .skilltype{
 	font-size:150%;
 	font-weight:bold;
+}
+
+#myframe{
+	height:83vh;
+	width:100%;
+}
+
+.project{
+	/*border-style:solid;*/
+	height:100px;
+	margin-top:30px;
+	background-color:#649ffc;
+	text-align:center;
+	font-size:150%;
+}
+
+.project:hover{
+	background-color:#3271d3;
+	box-shadow:1px 1px black;
+}
+
+#projectinfo{
+	height:16vh;
+	font-size:200%;
 }
