--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@ body{
 	font-size:200%;
 	color:#fffaf7;
 	font-weight:bold;
+	padding-right:10px;
 }
 
 .header{
@@ -54,7 +55,6 @@ body{
 #image{
 	height:100px;
 	width:auto;
-	padding-left:10px;
 }
 
 .b-orange{
