--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body{
     background-repeat:repeat;
 }
 
-@media(min-width:60em){.header{font-size: 50%}}
+@media(min-width:60em){.header{font-size:100px}}
 
 .titleimage{
 	height:100%;
@@ -56,6 +56,7 @@ body{
 #image{
 	height:100px;
 	width:auto;
+	float:left;
 }
 
 .b-orange{
