--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,8 @@ body{
 	font-family:Roboto;
 	background-image: url("assets/texture.jpg");
     background-repeat:repeat;
+    font-size:16px;
 }
-
-@media(min-width:300px;){.header{font-size:100px;}}
 
 .titleimage{
 	height:100%;
@@ -36,8 +35,9 @@ body{
 	width:100%;
 	font-family:Merriweather;
 	color:white;
-	font-size:900%;
+	font-size:700%;
 	font-weight:bolder;
+	text-align:center;
 }
 
 .skill{
@@ -59,16 +59,11 @@ body{
 	display:block;
 	margin:auto;
 	margin-bottom:30px;
-
 }
 
 .b-orange{
 	color:#ff9335;
 	font-weight:bolder;
-}
-
-.centered{
-	text-align:center;
 }
 
 .leftalign{
