--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,8 @@ body{
     font-size:16px;
 }
 
-@media(max-width:45em){
-	.header{font-size:30px;}
+@media only screen and (max-width:50em){
+	.header{font-size:30%!important;}
 }
 
 .titleimage{
