--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,9 @@ body{
     font-size:16px;
 }
 
-@media only screen and (max-width:50em){
-	.header{font-size:30%!important;}
+@media only screen and (max-width:100em){
+	.header{font-size:30%!important;
+			color:red!important;}
 }
 
 .titleimage{
