--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,7 @@ body{
 }
 
 @media only screen and (max-width:100em){
-	.header{font-size:30%!important;
-			color:red!important;}
+	.header{font-size:30%!important;}
 }
 
 .titleimage{
