--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,13 @@ body{
 	.header{font-size:350%!important;}
 }
 
+.vcenter{
+	justify-content:center;
+	align-items:center;
+	display:flex;
+	flex-direction:column;
+}
+
 .titleimage{
 	height:100%;
 	width:100%;
@@ -19,10 +26,6 @@ body{
 .landing{
 	height:100vh;
 	width:100vw;
-	justify-content:center;
-	align-items:center;
-	display:flex;
-	flex-direction:column;
 	margin-bottom:4em;
 }
 
@@ -93,28 +96,38 @@ body{
 	width:100%;
 }
 
-.project{
-	height:100px;
-	margin-top:30px;
+#fullScreen{
+	height:75px;
+	background-color:#42f48f;
+	border-radius:50px;
+}
+
+#fullScreen:hover{
+	background-color:#2db76a
+}
+
+.project{ 
+	height:150px;
+	margin-top:20px;
 	background-color:#649ffc;
 	text-align:center;
 	font-size:150%;
-	padding-top:30px;
-	border-radius:30px;
-}
-
-.project:hover{
-	background-color:#3271d3;
+	border-radius:50px;
+	position:relative;
 	box-shadow:1px 1px black;
 }
 
-#projectinfo{
-	margin-top:30px;
-	padding-left:20px;
-	padding-right:20px;
-	border-radius:30px;
-	background-color:black;
+.projectinfo{
 	color:white;
-	font-size:120%;
-	display:flex;
+	font-size:70%;
+	opacity:0.0;
+	background-color:#3271d3;
+	position:absolute;
+	top:0px;
+	left:0px;
+	height:100%;
+	width:100%;
+	border-radius:inherit;
+	padding-top:20px;
+	transition:opacity 0.75s;
 }
