--- a/styles.css
+++ b/styles.css
@@ -1,67 +1,8 @@
 body{
-	max-width: 100%;
-	overflow-x:hidden;
-	font-family:Roboto;
-	background-image: url("assets/texture.jpg");
-    background-repeat:repeat;
-    font-size:16px;
-}
-
-@media only screen and (max-width:45em){
-	.header{font-size:350%!important;}
-}
-
-.vcenter{
-	justify-content:center;
-	align-items:center;
-	display:flex;
-	flex-direction:column;
-}
-
-.titleimage{
-	height:100%;
-	width:100%;
-}
-
-.landing{
-	height:100vh;
-	width:100vw;
-	margin-bottom:4em;
-}
-
-#aboutme{
-	background-color:#434549;
-	font-size:150%;
-	color:#fffaf7;
-	font-weight:bold;
-}
-
-.header{
-	position:absolute;
-	top:25%;
-	width:100%;
-	font-family:Merriweather;
-	color:white;
-	font-size:700%;
-	font-weight:bolder;
-	text-align:center;
-}
-
-.subtitle{
-	font-size:50%;
-	font-weight:lighter;
-}
-
-.darkback{
-	background-color:black;
-}
-
-#image{
-	height:300px;
-	width:300px;
-	display:block;
-	margin:auto;
-	margin-bottom:30px;
+	background-image:url("assets/background.jpg");
+	background-size:100vw;
+	font-family: 'BenchNine', sans-serif;
+	font-size:24pt;
 }
 
 .b-orange{
@@ -69,65 +10,136 @@ body{
 	font-weight:bolder;
 }
 
-.leftalign{
-	text-align:left;
-}
-
-.stars{
-	float:right;
-	color:#002e7a;
-}
-
-.title{
-	color:#424447;
-	font-size:200%;
-	font-weight:bolder;
+#navmenu{
+	margin-top:100px;
+	display:flex;
+	justify-content:space-between;
+	align-content:center;
 	text-align:center;
-	margin-top:50px;
-	margin-bottom:40px;
 }
 
-#skilllist{
+#ianlai{
+	margin-left:0;
+	font-size:48pt;
+	flex-grow:8;
+	text-align:left;
+	padding-left:50px;
+	color:white;
 	font-weight:bold;
 }
 
-#myframe{
-	height:83vh;
-	width:100%;
-}
-
-#fullScreen{
-	height:75px;
-	background-color:#42f48f;
-	border-radius:50px;
-}
-
-#fullScreen:hover{
-	background-color:#2db76a
-}
-
-.project{ 
-	height:150px;
-	margin-top:20px;
-	background-color:#649ffc;
-	text-align:center;
-	font-size:150%;
-	border-radius:50px;
-	position:relative;
-	box-shadow:1px 1px black;
-}
-
-.projectinfo{
+.navtab{
+	font-size:32pt;
+	flex-grow:1;
 	color:white;
-	font-size:70%;
-	opacity:0.0;
-	background-color:#3271d3;
+	text-align:center;
+}
+
+.navtab:hover{
+	text-decoration: underline;
+	-moz-text-decoration-color: #f29c24; /* Code for Firefox */
+	text-decoration-color: #f29c24;
+}
+
+#contentbox{
+	margin-left:50px;
+	width:40%;
+	background-color:rgba(0,0,0,0.2);
+	color:white;
+	padding:20px;
+}
+
+.content{
+	display:none;
+}
+
+.thingsido{
 	position:absolute;
-	top:0px;
-	left:0px;
-	height:100%;
+	top:30%;
 	width:100%;
-	border-radius:inherit;
-	padding-top:20px;
-	transition:opacity 0.75s;
+	text-align:center;
+	font-size:48pt;
+}
+
+#skilltable{
+	position:absolute;
+	overflow-y:hidden;
+	bottom:0px;
+	height:200px;
+	max-height:0px;
+	width:100%;
+	-webkit-transition: max-height 0.5s linear; /* Safari */
+	transition: max-height 0.5s linear;
+	background-color:#f4f4ff;
+	display:flex;
+	justify-content:space-around;
+}
+
+.skill{
+	vertical-align:center;
+}
+
+.strength{
+	float:right;	
+}
+
+.fullBox{
+	display:inline-block;
+	width:50px;
+	height:25px;
+	background-color:#5c5d5e;
+	border:#1b1b1c;
+	border-style:solid;
+	margin-left:10px;
+}
+
+.emptyBox{
+	display:inline-block;
+	width:50px;
+	height:25px;
+	background-color:#c3c3cc;
+	border:#1b1b1c;
+	border-style:solid;
+	margin-left:10px;
+}
+
+#myframe{
+	height:600px;
+	width:100%;
+}
+
+#projectList{
+	position:absolute;
+	z-index:1;
+}
+
+#projectTab{
+	display:flex;
+	flex-direction:column;
+	align-content:space-between;
+}
+
+.project{
+	max-height:0px;
+	height:70px;
+	overflow-y:hidden;
+	-webkit-transition: max-height 0.5s linear; /* Safari */
+	transition: max-height 0.5s linear;
+	background-color:#f29c24;
+	margin:10px;
+	color:#767777;
+	border-radius:5px;
+	padding-left:5px;
+	padding-right:5px;
+}
+
+.project:hover{
+	background-color:#af6e13;
+}
+
+.newtab{
+	margin:10px;
+	background-color:#eaefef;
+	height:25px;
+	width:25px;
 }
