--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,20 @@
 body{
 	background-image:url("assets/background.jpg");
-	background-size:100vw;
 	font-family: 'BenchNine', sans-serif;
 	font-size:24pt;
+}
+
+@media(orientation:landscape){
+	body{
+		background-image:url("assets/dark_db.jpg");
+		background-size:100vw 100vh;
+	}
+}
+
+@media(orientation:portrait){
+	body{
+		background-image:url("assets/dark_wood.png");
+	}
 }
 
 .b-orange{
@@ -11,16 +23,17 @@ body{
 }
 
 #navmenu{
-	margin-top:100px;
+	margin-top:55px;
 	display:flex;
 	justify-content:space-between;
 	align-content:center;
 	text-align:center;
+	flex-wrap:wrap;
 }
 
 #ianlai{
 	margin-left:0;
-	font-size:48pt;
+	font-size:56pt;
 	flex-grow:8;
 	text-align:left;
 	padding-left:50px;
@@ -43,10 +56,13 @@ body{
 
 #contentbox{
 	margin-left:50px;
-	width:40%;
 	background-color:rgba(0,0,0,0.2);
 	color:white;
+	max-height:70%;
+	max-width:50%;
 	padding:20px;
+	-webkit-transition: height 0.5s, width 0.5s;
+	transition: height 0.5s, width 0.5s;
 }
 
 .content{
@@ -68,11 +84,12 @@ body{
 	height:200px;
 	max-height:0px;
 	width:100%;
-	-webkit-transition: max-height 0.5s linear; /* Safari */
+	-webkit-transition: max-height 0.5s linear;
 	transition: max-height 0.5s linear;
 	background-color:#f4f4ff;
 	display:flex;
 	justify-content:space-around;
+	flex-wrap:wrap;
 }
 
 .skill{
@@ -123,7 +140,7 @@ body{
 	max-height:0px;
 	height:70px;
 	overflow-y:hidden;
-	-webkit-transition: max-height 0.5s linear; /* Safari */
+	-webkit-transition: max-height 0.5s linear;
 	transition: max-height 0.5s linear;
 	background-color:#f29c24;
 	margin:10px;
@@ -142,4 +159,17 @@ body{
 	background-color:#eaefef;
 	height:25px;
 	width:25px;
+}
+
+#flexBox{
+	display:flex;
+	justify-content:space-around;
+	align-content:center;
+	text-align:center;
+}
+
+.contactpic{
+	height:100px;
+	width:100px;
+	border-radius:10px;
 }
