Reduced image quality for faster loading times, changed mobile background

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body{
 
 @media(orientation:portrait){
 	body{
-		background-image:url("assets/dark_wood.png");
+		background-image:url("assets/greyback.png");
 	}
 }
 
