--- a/styles.css
+++ b/styles.css
@@ -1,185 +1,142 @@
 body{
-	font-family: 'BenchNine', sans-serif;
-	font-size:24pt;
+	background-color:#f7f7f7;
+	overflow-x: hidden;
 }
 
-@media(orientation:landscape){
-	body{
-		background-image:url("assets/dark_db.jpg");
-		background-size:100vw 100vh;
-	}
+#top{
+	position:absolute;
+	top:0;
 }
 
-@media(orientation:portrait){
-	body{
-		background-image:url("assets/greyback.png");
-	}
-}
-
-.b-orange{
-	color:#ff9335;
+.title{
+	font-size:600%;
+	font-family:Raleway;
 	font-weight:bolder;
+	text-align:center;
+	width:100%;
+	margin-top:300px;
+	user-select:none;
 }
 
-#navmenu{
-	margin-top:55px;
+#buttonContainer{
 	display:flex;
-	justify-content:space-between;
-	align-content:center;
-	text-align:center;
-	flex-wrap:wrap;
+	justify-content:center;
+	margin-top:50px;
 }
 
-#ianlai{
-	margin-left:0;
-	font-size:56pt;
-	flex-grow:8;
-	text-align:left;
-	padding-left:50px;
-	color:white;
-	font-weight:bold;
+.button{
+	background-color:#f7f7f7;
+	width:200px;
+	height:100px;
+	border:5px solid #b2b2b2;
+	margin:50px;
+	text-decoration:none;
+	display:flex;
+	color:black;
+	user-select:none;
+	justify-content:center;
+	align-items:center;
+	border-radius:5px;
+	box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
+	font-family:Raleway;
+	font-size:130%;
+	-moz-transition: all 0.1s;
+ 	-khtml-transition: all 0.1s;
+ 	-webkit-transition: all 0.1s;
+	-o-transition: all 0.1s;
+	transition: all 0.1s;
 }
 
-.navtab{
-	font-size:32pt;
-	flex-grow:1;
-	color:white;
-	text-align:center;
-}
-
-.navtab:hover{
-	text-decoration: underline;
-	-moz-text-decoration-color: #f29c24; /* Code for Firefox */
-	text-decoration-color: #f29c24;
+.button:hover{
+	cursor:pointer;
+	transform: scale(1.05);
 }
 
 .contentBox{
 	width:100%;
-	height:70%;
 	display:flex;
-	justify-content:space-around;
-	align-content:center;
-	text-align:center;
-	flex-wrap:wrap;
+	justify-content:center;
+	align-items:center;
+	margin-top:15%;
+	margin-bottom:15%;
 }
 
-.content{
-	display:none;
-	background-color:rgba(0,0,0,0.2);
-	color:white;
-	padding:20px;
-	max-width:50%;
-}
-
-.item{
-	display:none;
-}
-
-.titleimage{
-	height:100%;
+#aboutmeBox{
 	width:100%;
-}
-
-.thingsido{
-	text-align:center;
-	font-size:48pt;
-}
-
-#myframe{
-	height:600px;
-	width:800px;
-}
-
-#skilltable{
-	position:absolute;
-	overflow-y:hidden;
-	bottom:0px;
-	width:100%;
-	-webkit-transition: max-height 1s ease-out;
-	transition: max-height 1s ease-out;
-	background-color:#f4f4ff;
 	display:flex;
-	justify-content:space-around;
-	flex-wrap:wrap;
+	justify-content:center;
+	align-items:center;
 }
 
-.skill{
-	vertical-align:center;
-}
-
-.strength{
-	float:right;	
-}
-
-.fullBox{
-	display:inline-block;
-	width:50px;
-	height:25px;
-	background-color:#5c5d5e;
-	border:#1b1b1c;
-	border-style:solid;
-	margin-left:10px;
-}
-
-.emptyBox{
-	display:inline-block;
-	width:50px;
-	height:25px;
-	background-color:#c3c3cc;
-	border:#1b1b1c;
-	border-style:solid;
-	margin-left:10px;
-}
-
-#projectList{
-	position:absolute;
-}
-
-#projectTab{
-	display:flex;
-	flex-direction:column;
-	align-content:space-between;
+.text{
+	width:70%;
+	font-size:300%;
+	font-family:Raleway;
 }
 
 .project{
-	max-height:0px;
-	height:70px;
-	overflow-y:hidden;
-	-webkit-transition: max-height 0.5s linear;
-	transition: max-height 0.5s linear;
-	background-color:#f29c24;
-	margin:10px;
-	color:#767777;
+	margin-left:75px;
+	margin-right:75px;
+	position:relative;
+	border:5px solid #b2b2b2;
 	border-radius:5px;
-	padding-left:5px;
-	padding-right:5px;
+	box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
+	cursor:pointer;
+	user-select:none;
 }
 
-.project:hover{
-	background-color:#af6e13;
+.projectPic{
+	width:300px;
+	height:300px;
 }
 
-.newtab{
-	margin:10px;
-	background-color:#eaefef;
-	height:25px;
-	width:25px;
-}
-
-.newtab:hover{
-	filter:brightness(50%);
-}
-
-#flexBox{
-	display:flex;
-	justify-content:space-around;
-	align-content:center;
+.projectTitle{
+	width:100%;
 	text-align:center;
+	background-color:#824500;
+	color:white;
+	font-size:150%;
 }
 
-.contactpic{
-	height:100px;
+.overlay{
+	position:absolute;
+	top:0;
+	-moz-transition: all 0.5s;
+ 	-khtml-transition: all 0.5s;
+ 	-webkit-transition: all 0.5s;
+	-o-transition: all 0.5s;
+	transition: all 0.5s;
+	opacity:0;
+	width:300px;
+	height:300px;
+	background-color:#002663;
+	color:white;
+	font-family:Raleway;
+	font-size:130%;
+}
+
+.project:hover .overlay{
+	opacity:0.8;
+}
+
+#contactBox{
+	justify-content:space-around;
+}
+
+.contactPic{
 	width:100px;
-	border-radius:10px;
-	margin:10px;
+	height:100px;
+	border-radius:30px;
+	user-select:none;
+}
+
+#topBox{
+	text-align:center;
+	width:100%;
+}
+
+#topButton{
+	width:50px;
+	height:50px;
+	user-select:none;
 }
