--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,29 @@
-body{
-	overflow-x: hidden;
-	background-color: #f7f7f7;
+@media screen and (orientation: landscape) {
+	body {
+		background-size: 100% auto;
+	}
 }
 
-#top{
+@media screen and (orientation: portrait) {
+	body {
+		background-size: auto 100%;
+	}
+}
+
+body {
+	overflow-x: hidden;
+	background-image: url("assets/deepcove.JPG");
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	margin: 0;
+}
+
+#top {
 	position: absolute;
 	top: 0;
 }
 
-.hoverGrow{
+.hoverGrow {
 	-moz-transition: all 0.1s;
  	-khtml-transition: all 0.1s;
  	-webkit-transition: all 0.1s;
@@ -16,27 +31,25 @@ body{
 	transition: all 0.1s;
 }
 
-.hoverGrow:hover{
+.hoverGrow:hover {
 	transform: scale(1.05);
 }
 
-.title{
+.title {
 	font-size: 600%;
 	font-family: Raleway;
 	font-weight: bolder;
 	text-align: center;
 	width: 100%;
-	margin-top: 300px;
 	user-select: none;
 }
 
-#buttonContainer{
+#buttonContainer {
 	display: flex;
 	justify-content: center;
-	margin-top: 50px;
 }
 
-.button{
+.button {
 	background-color: #f7f7f7;
 	width: 200px;
 	height: 100px;
@@ -54,38 +67,43 @@ body{
 	font-size: 130%;
 }
 
-.button:hover{
+.button:hover {
 	cursor: pointer;
 }
 
-.contentBox{
+#titleContentBox {
+	margin-top: 23vh;
+	height: 54vh;
+}
+
+.contentBox {
 	width: 100%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-wrap: wrap;
 	margin-top: 15%;
-	margin-bottom: 15%;
+	background-color: #f7f7f7;
+	padding: 20px;
 }
 
-.flexDown{
+.flexDown {
 	flex-direction: column;
 }
 
-#aboutmeBox{
+#aboutmeBox {
 	width: 100%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 }
 
-.text{
-	width: 70%;
+.text {
 	font-size: 250%;
 	font-family: Raleway;
 }
 
-.project{
+.project {
 	margin: 75px;
 	position: relative;
 	border: 5px solid #b2b2b2;
@@ -95,12 +113,12 @@ body{
 	user-select: none;
 }
 
-.projectPic{
+.projectPic {
 	width: 300px;
 	height: 300px;
 }
 
-.projectTitle{
+.projectTitle {
 	width: 100%;
 	text-align: center;
 	background-color: #824500;
@@ -109,7 +127,15 @@ body{
 	font-family: Raleway;
 }
 
-.overlay{
+.titleAsPicture {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-size: 300%;
+	font-family: Raleway;
+}
+
+.overlay {
 	position: absolute;
 	top: 0;
 	-moz-transition: all 0.5s;
@@ -128,15 +154,24 @@ body{
 	padding: 10px;
 }
 
-.project:hover .overlay{
+.project:hover .overlay {
 	opacity: 0.85;
 }
 
-#contactBox{
+#contactAnchor {
+	flex-direction: column;
 	justify-content: space-around;
+	min-height: 54vh;
 }
 
-.contactPic{
+.contactLinks {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	width: 100%;
+}
+
+.contactPic {
 	width: 100px;
 	height: 100px;
 	border-radius: 30px;
@@ -144,21 +179,12 @@ body{
 
 }
 
-.contactPic:hover{
-	filter: grayscale(100%);
-}
-
-#topBox{
-	text-align: center;
-	width: 100%;
-}
-
-#topButton{
+#topButton {
 	width: 50px;
 	height: 50px;
 	user-select: none;
 }
 
-.pink{
+.pink {
 	color: #C60078;
 }
