--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ body {
 	background-image: url("assets/deepcove.JPG");
 	background-repeat: no-repeat;
 	background-attachment: fixed;
+	background-position: center center;
 	margin: 0;
 }
 
