--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,21 @@
 	}
 }
 
+::-webkit-scrollbar {
+    width: 7px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+	border-radius: 3px;
+    background: #888; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+}
+
 body {
 	overflow-x: hidden;
 	background-image: url("assets/deepcove.JPG");
@@ -84,8 +99,9 @@ body {
 	align-items: center;
 	flex-wrap: wrap;
 	margin-top: 15%;
-	background-color: #f7f7f7;
+	background-color: rgba(247, 247, 247, 0.9);
 	padding: 20px;
+	box-shadow: 0 10px 30px 0 rgba(0, 0, 0, 0.5), 0 -10px 30px 0 rgba(0, 0, 0, 0.5);
 }
 
 .flexDown {
@@ -104,12 +120,25 @@ body {
 	font-family: Raleway;
 }
 
+.projectsSection {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.projects {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-wrap: wrap;
+}
+
 .project {
 	margin: 75px;
 	position: relative;
 	border: 5px solid #b2b2b2;
 	border-radius: 5px;
-	box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
+	box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.4);
 	cursor: pointer;
 	user-select: none;
 }
@@ -162,7 +191,6 @@ body {
 #contactAnchor {
 	flex-direction: column;
 	justify-content: space-around;
-	min-height: 54vh;
 }
 
 .contactLinks {
@@ -170,6 +198,7 @@ body {
 	justify-content: space-around;
 	align-items: center;
 	width: 100%;
+	height: 40vh;
 }
 
 .contactPic {
@@ -188,4 +217,8 @@ body {
 
 .pink {
 	color: #C60078;
+}
+
+.opaque {
+	background-color: rgba(247, 247, 247, 1);
 }
